# trading-ml-modeling

./: .gitignore  Dockerfile.fn.visualisation.py  README.md  pyproject.toml
experements/: extra_info_searching.ipynb  model_logistic_regression.ipynb
external_data/: ru_central_bank_rates.xlsx
feature_engineering/feature_visualisation/: fe_visualisation.py
modeling/: 0.data_loader.ipynb  1.enrich_with_external_data.ipynb  10.backtesting_on_models.ipynb  11.0.backtesting_report.ipynb  14.backtesting_on_hrp.ipynb  2.normalize_price.ipynb  3.0.feature_engineering.ipynb  3.1.feature_exclude.ipynb  3.feature_engineering.ipynb  4.cusum_event_marker.ipynb  4.stock_exclude.ipynb  5.cusum_event_marker.ipynb  5.tbm_labeling.ipynb  6.0.tbm_labeling.ipynb  6.1.analyze_tbm_distribution.ipynb  6.analyze_tbm_distribution.ipynb  7.feature_diagnostics.ipynb  8.1.model_training_LGBMClassifier.ipynb  8.2.model_training_decision_trees.ipynb  8.3.model_random_forest_classifier.ipynb  8.4.model_training_TSMixer.ipynb  8.5.model_training_MLPClassifier.ipynb  8.model_training.ipynb  9.0.ensemble_modelling.ipynb  9.1.meta_labeling.ipynb  9.meta_labeling.ipynb  LGBMClassifier_modeling.py  MLPClassifier_modelling.py  TSMixer_Classifier_modeling.py  backtesting_utils.py  ensemble_modelling.py  meta_model_trainer.py  trading_strategies.py
modeling/config/: feature_exclude_list.json  splits.json  stock_exclude_list.json
modeling/reports/: feature_report.txt
modeling/reports/strategies/: Ensemble_Classifier.csv  LGBM_Classifier.csv  MLP_Classifier.csv  TSMixer.csv  random.csv
modeling/strategies/: LGBM_classifier_strategy.py  MLP_classifier_strategy.py  TSMixer_strategy.py  ensemble_modelling_strategy.py  general.py  random_strategy.py
models/: model_decision_tree_classifier.ipynb
portfolio_optimization/: hrp.ipynb
src/clients/: bcs_client.py  bcs_client_market_data.py  testing_bcs_client.py  testing_mm_spread_strategy.py
src/data_loader/: load_stock_main_info.py  news_full_text.py  news_loader.py  setiment_score.py
trading/clients/: bcs_client.py  testing_bcs_client.py
utils/: load_stock_with_features.py
