[project]
name = "ml-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "ALIEV Beylak" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "apimoex (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pyportfolioopt (>=1.5.6,<2.0.0)",
    "bt (>=1.1.2,<2.0.0)",
    "quantstats (>=0.0.70,<0.0.71)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas-ta (>=0.3,<1.0)",
    "numpy (>=1.26.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "graphviz (>=0.21,<0.22)",
    "pydotplus (>=2.0.2,<3.0.0)",
    "pywavelets (>=1.9.0,<2.0.0)",
    "vectorbt (>=0.28.1,<0.29.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "lightning (>=2.5.6,<3.0.0)",
    "transformers (>=4.57.1,<9.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "async-lru (>=2.0.5,<3.0.0)",
    "fredapi (>=0.5.2,<0.6.0)",
    "alpha-vantage (>=3.0.0,<4.0.0)",
    "newspaper4k (>=0.9.3.1,<0.10.0.0)",
    "lxml-html-clean (>=0.4.3,<0.5.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
packages = [
    { include = "trading" }
]